--- a/ShopApp.WebUI/Views/Home/Index.cshtml
+++ b/ShopApp.WebUI/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ShopApp.Entities.Product>
+﻿@model ShopApp.WebUI.Models.ProductListModel
 
 @{ 
 
@@ -12,10 +12,11 @@
 
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <a href="/modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 
 </head>
 <body>
-    @foreach (var item in Model)
+    @foreach (var item in Model.Products)
     {
         <p>@item.Name</p>
     }
