--- a/deneme/Pages/_ViewImports.cshtml
+++ b/deneme/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using ShopApp.WebUI
-@namespace ShopApp.WebUI.Pages
+@using deneme
+@namespace deneme.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
